[package]
license     = "MIT"
edition     = "2024"
version     = "0.1.2"
name        = "retry_core"
repository  = "https://github.com/cainthebest/retry_core"
authors     = ["cainthebest <https://github.com/cainthebest>"]
description = "A retry library for synchronous fallible operations"

[profile.release]
codegen-units = 1
opt-level     = 3
lto           = 'fat'
debug         = false
